Add Background Image, Fix some text issue

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Miver's Place</title>
     <!--<meta name="description" content="Developer | Gamer | Photographer | Traveler"/>-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>-->
+    <!--<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">-->
+    <link href='//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400' rel='stylesheet' type='text/css'>
     <!--<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">-->
     <link rel="stylesheet" type="text/css" href="stylesheets/index.css" media="screen" />
+    <style>
+        body{font-family:'Microsoft JhengHei'}
+    </style>
   </head>
   <body>
-      <header class="main-header" style="">
+      <header class="main-header" style="background-image:url(/content/images/0620_1.jpg)">
           <div class="vertical">
               <div class="main-header-content inner">
                   <h1 class="page-title">Miver's Place</h1>
